Update EscapeAnalysis